[tool.poetry]
name = "gdrive-download"
version = "0.1.0"
description = ""
authors = ["Vasco Compain <vasco@ik.me>"]
readme = "README.md"
packages = [{include = "download_file.py"}]
[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.87.0"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
